--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -18,7 +18,8 @@ body{
     top:0;
     left:0;
     z-index:99999;
-    box-shadow:3px 3px -8px 3px;
+    background: white;
+    box-shadow:3px 3px -8px 3px #ddd;
 }
 
 @media only screen and (max-width:767px){
