--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -49,7 +49,24 @@
     .reviewSection{
         @apply bg-[#DEF2EB] w-full lg:h-auto;
     }
+
+@keyframes rotate {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  .rotate {
+    animation: rotate 0.5s ease-in-out forwards;
+  }
+
+    
 }
+
+
 
 
 @media only screen and (max-width:1024px){
